--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <div class="container">
       <h1>Productivity Tracker</h1>
       <div id="stats"></div>
+      <button id="show-more" class="control-button">Show More</button>
     </div>
     <script src="popup.js"></script>
   </body>
